<resources>
    <string name="app_name">AcneApp</string>

    <!--Activity titles-->

    <string name="breakout_activity">Add breakout information</string>
    <string name="home_activity">Meals</string>
    <string name="data_activity">Breakout Data</string>

    <!--Breakout Activity-->

    <string name="breakout_header_info">Rate your breakout</string>

    <string name="breakout_level_0">0</string>
    <string name="breakout_level_1">1</string>
    <string name="breakout_level_2">2</string>
    <string name="breakout_level_3">3</string>
    <string name="breakout_level_4">4</string>
    <string name="breakout_level_5">5</string>

    <!--Menu Home-->

    <string name="action_start_data">Data</string>
    <string name="action_insert_dummy">Insert dummy data</string>
    <string name="action_delete_entries">Delete all entries</string>

    <!--Menu Editor-->
    <string name="action_save_meal">SAVE</string>

    <!--Meal Spinner Array-->

    <string name="option_spinner_breakfast">Breakfast</string>
    <string name="option_spinner_lunch">Lunch</string>
    <string name="option_spinner_dinner">Dinner</string>
    <string name="option_spinner_snack">Snack</string>

    <!--Editor Activity-->

    <string name="editor_food_info">Add food info:</string>
    <string name="editor_food_hint">Chicken Salad</string>
    <string name="editor_category_info">Add food category:</string>
    <string name="editor_category_hint">Poultry</string>
    <string name="spinner_meal_info">Choose meal:</string>

</resources>
